2010-03-14	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* audio/Midi.cc: Fixed dangerous dangling cstr pointers.
	  Imported Colourless' bugfix to trunk: fixing assumption that all paths
	  will start with <STATIC>/.
	* audio/midi_drivers/MT32EmuMidiDriver.cpp: Implemented a more robust ROM
	  and MT32 data file function for MT32Emu.
	  Fixed invalid bundle search in MacOSX.
	* files/utils.cc: Fixed bug that prevented a data dir specified at Exult.cfg
	  from being used.
	  Fixed bug in which Exult would bail out in MacOS X app bundles when
	  searching for the external data dir even when it shouldn't.
	* gumps/AudioOptions_gump.*: Mapped button ids into an enum and renumbered
	  their order. It is easier to add new buttons now and still have the gump
	  work correctly; this also fixes a recent bug toggling audio on/off.
	

2010-03-13	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* All: Improvements to the bundle checks: Exult will now try to see if the
	  bundled file exists and try to use it only in this case.

2010-03-12	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* shapes/data_utils.h: Fixed compilation warnings in MacOS X.
	* imagewin/*: Added 16-bit and 32-bit versions of Point, Interlaced and
	  Scale2x scalers. The old 8-bit scalers are still available, but Exult
	  will use them only if it can't use the 16-bit and 32-bit versions.

2010-03-11	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* files/utils.h: Default save location in Mac OS X changed (again) to be
	  ~/Library/Application Support/Exult (issue #1377892).
	* De-hard-coding, round 3: All information about which gump a given shape
	  should display is now given by the 'container.dat' file; a default file
	  with the original game data is embedded in Exult_xx.flx. This includes
	  moving BG NPC gumps from paperdoll data; Exult/ES will do this for older
	  versions of paperdol_info.txt on load. The embedded 'container.dat', as