@@ -991,17 +991,19 @@ static void Init
 	xfd = ConnectionNumber(info.info.x11.display);
 	Server_init();			// Initialize server (for map-editor).
 	xdnd = new Xdnd(info.info.x11.display, info.info.x11.wmwindow,
-		info.info.x11.window, Move_dragged_shape, Move_dragged_combo,
-				Drop_dragged_shape, Drop_dragged_chunk, 
-				Drop_dragged_npc, Drop_dragged_combo);
+	    		info.info.x11.window,
+	    		Move_dragged_shape, Move_dragged_combo,
+	    		Drop_dragged_shape, Drop_dragged_chunk, 
+	    		Drop_dragged_npc, Drop_dragged_combo);
 #elif !defined(UNDER_CE)
 	SDL_GetWMInfo(&info);
 	Server_init();			// Initialize server (for map-editor).
 	hgwin = info.window;
 	OleInitialize(NULL);
-	windnd = new Windnd(hgwin, Move_dragged_shape, Move_dragged_combo,
-				Drop_dragged_shape, Drop_dragged_chunk,
-							Drop_dragged_combo);
+	windnd = new Windnd(hgwin,
+	    		Move_dragged_shape, Move_dragged_combo,
+	    		Drop_dragged_shape, Drop_dragged_chunk,
+	    		Drop_dragged_npc, Drop_dragged_combo);
 	if (FAILED(RegisterDragDrop(hgwin, windnd))) {
 		cout << "Something's wrong with OLE2 ..." << endl;
 	};
